# lcs-cad-mcp

./: .dockerignore  .env.example  .gitignore  AutoDCR_PreDCR_MCP_Server_Architecture.docx  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: ralph-loop.local.md
.hypothesis/constants/: 097b0ef6f2549d81  0c49552db9d23ae0  194d95751523ce13  1babea46c3155d61  1bf1a5d53ca16e2a  1e2bb69cc72d36f8  2820b49ec45d8a48  334b5ce261896949  355cf0a4e42145cf  3a05e6d8efd6580e  3eae115549a9c1b2  406ed853f066d872  46ec5a54bb4fa05e  49745b22256d9eef  4a5b27be5963e4b8  536d053a438b90e8  5baaceb9ba9af5ad  5ce2da10d0437c24  6f80428188f97c7c  7630488c0a052dbf  7a5c532bee27c510  7ca0c37b05384ca3  89771b18d138f69b  98967e1255e4baa7  a0bc2443afd6d8c6  a7a434264fbbb01e  b17f012ff36fb43d  b1d1530710de5163  baeb2cd0d30fbad1  cb47e61d624f1ab8  cd07f8ef990e9fba  cf5c6959bd356376  da39a3ee5e6b4b0d  df038cffd19389ee  e53d059d8e8ab10d  e869fa5e037962c6  eea4ec8e09f323d5  ef28c3d44bebff8b  fb734d9d5f111998
_bmad-output/implementation-artifacts/: 1-1-project-scaffold-dependency-setup.md  1-2-mcp-server-core-stdio-transport.md  1-3-sse-transport-support.md  1-4-structured-error-response-contract.md  1-5-pydantic-input-validation-framework.md  10-1-report-data-model-assembly.md  10-2-report-generate-pdf-mcp-tool.md  10-3-report-generate-docx-mcp-tool.md  (+47 more)
dcr_configs/: example_authority.yaml  sample-residential.yaml  schema.yaml
docs/: claude-desktop-config.md  dcr-config-schema.md  starter-guide.md  tool-api-reference.md  windows-deployment-guide.md
tests/: conftest.py
(+94 files in other folders)
