[project]
name = "lcs-cad-mcp"
version = "0.1.0"
description = "MCP server replicating PreDCR and AutoDCR as AI-consumable tools"
requires-python = ">=3.11"
dependencies = [
    # fastmcp 3.x required for ctx.get_state() / ctx.set_state() session architecture
    "fastmcp>=3.1.0,<4.0.0",
    "pydantic>=2.0",
    "pydantic-settings",
    "ezdxf",
    "shapely",
    "scipy",
    "sqlalchemy",
    "python-docx",
    "reportlab",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "hypothesis",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lcs_cad_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
